--- a/index.html
+++ b/index.html
@@ -1,6 +1,73 @@
-<html>
-  <head>
-    
-  </head>
-  <body></body>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Primera Pagina Web</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <header>
+        <h1>Hola! Soy Emanuel</h1>
+    </header>
+
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="inicioSesion.html">Iniciar Sesion</a>
+        <a href="#footer">Contacto</a>
+    </nav>
+
+    <main>
+        <section class="carousel">
+            <div class="slides">
+                <img src="Img/Imagen1.jpg" alt="Imagen 1">
+                <img src="Img/imagen2.jpg" alt="Imagen 2">
+                <img src="Img/imagen3.jpg" alt="Imagen 3">
+            </div>
+        </section>
+
+        <section class="columns">
+            <div class="column">
+                <img src="Img/img1.pjpeg" alt="Runnig">
+                
+                <h3>Runnig</h3>
+                <p>El runnig es un deporte que recientemente lo empeze a practicar mas que todo por salud,
+                    pero con el tiempo me di cuenta que me gusta y disfruto cundo salgo a correr por las mañanas. 
+                Es un deporte que ayuda a desestresarse y nos sirve para mantener una vida sana.</p>
+            </div>
+            <div class="column">
+                <img src="Img/img2.png" alt="Futbol">
+                <h3>Futbol</h3>
+                <p>El futbol me gusta desde que soy niño y desde esa edad lo practico, trato de no perderme nigun partido
+                    del Real Madrid, que es mi equipo favorito. Es un deporte divertido que me gusta practicar con los amigos y mi familia.</p>
+            </div>
+            <div class="column">
+                <img src="Img/img3.jpeg" alt="Videojuegos">
+                <h3>Videojuegos</h3>
+                <p>Los videjuegos es un pastiempo que tengo, me gusta jugar en los tiempos libres. El genero que mas me gusta son los de historia a mundo abierto,
+                    aunque tambien disfruto de los juegos de disparos en linea donde juego con los amigos y paso un rato divertido.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer id="footer">
+        <p>&copy; 2025 Emanuel Alexandro Rafael Peña Monterroso </p>
+        <p>Carnet: 5390-25-18177</p>
+        <p> Introduccion a los Sistemas de Computo</p>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook"><i
+                    class="fab fa-facebook-f"></i></a>
+            <a href="https://x.com/" target="_blank" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://gt.linkedin.com/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+    </footer>
+
+</body>
+
 </html>
